# security-scanner

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: cwe_coverage.py  cwe_results.json  results.json  run_benchmarks.py
examples/: output.txt  vulnerable.js
src/: __init__.py  cli.py  reporter.py  scanner.py
src/security_scanner/: __init__.py  cli.py  config.py  dashboard.py  detection.py  git_utils.py  history.py  mcp.py  mcp_server.py  reporter.py  scanner.py
src/security_scanner/agents/: __init__.py  diff_analyzer.py  model_registry.py  models.py  reviewer.py  verdict.py
src/security_scanner/domains/: __init__.py  base.py  builtin.py  container.py  iac.py  lint.py  sast.py  sca.py  tool_runner.py  typecheck.py
src/security_scanner/provisioning/: __init__.py  manifest.py  provisioner.py
tests/: test_agents.py  test_config.py  test_dashboard.py  test_detection.py  test_domain_registry.py  test_domains_builtin.py  test_git_utils.py  test_history.py  test_new_rules.py  test_scan_modes.py  test_scanner.py  test_tool_runner.py
