[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-security-scan"
version = "0.1.2"
description = "Static security scanner for AI-generated web app code. Finds hardcoded secrets, injection risks, CORS misconfigs and more."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["security", "scanner", "static-analysis", "secrets", "devsecops", "sast", "vite", "react"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[project.scripts]
security-scan = "security_scanner.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/security_scanner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.urls]
Repository = "https://github.com/nometria/security-scanner"
